--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,17 @@ services:
       - MYSQL_DATABASE=app
       - MYSQL_USER=app
       - MYSQL_PASSWORD=pass
+  node-app:
+    build: artifacts/gate-simulator
+    image: node:10-alpine
+    ports:
+    - '9999:9999'
+  postgresdb:
+    image: postgres
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=pass
+    ports:
+      - '5432:5432'
 
